--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,9 @@
 .icon-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Cambié a auto-fill para llenar la fila */
+    grid-template-columns: repeat(
+        auto-fill,
+        minmax(200px, 1fr)
+    ); /* Cambié a auto-fill para llenar la fila */
     gap: 20px;
     justify-items: center;
     padding: 20px;
@@ -33,9 +36,6 @@
     margin-top: 5px;
 }
 
-<<<<<<< HEAD
-
-=======
 /*CUADROS PESO STOCK*/
 .cuadro {
     width: 100px;
@@ -53,53 +53,59 @@
     transition: opacity 0.3s;
 }
 
+/* ESTILOS SWEET ALERT */
+.btn-confirm {
+    background-color: red !important;
+    color: white !important;
+}
 /* ESTILOS ALERT PERSONALIZADOS */
-    .overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.5);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 1000;
-    }
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
 
-    .dialog {
-        background: white;
-        padding: 20px;
-        border-radius: 8px;
-        text-align: center;
-        width: 300px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
+.dialog {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    width: 300px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 
-    .dialog button {
-        margin: 10px;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-    }
+.dialog button {
+    margin: 10px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
 
-    .dialog .accept {
-        background: #4caf50;
-        color: white;
-    }
+.dialog .accept {
+    background: #4caf50;
+    color: white;
+}
 
-    .dialog .cancel {
-        background: #f44336;
-        color: white;
-    }
->>>>>>> 6fea693 (primercommit)
-
+.dialog .cancel {
+    background: #f44336;
+    color: white;
+}
 
 /* Responsive tweaks */
 @media (max-width: 1024px) {
     .icon-container {
-        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); /* Menor tamaño de columna en pantallas medianas */
+        grid-template-columns: repeat(
+            auto-fill,
+            minmax(180px, 1fr)
+        ); /* Menor tamaño de columna en pantallas medianas */
     }
 
     .icon-card {
@@ -113,7 +119,10 @@
 
 @media (max-width: 768px) {
     .icon-container {
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Ajuste para pantallas pequeñas */
+        grid-template-columns: repeat(
+            auto-fill,
+            minmax(150px, 1fr)
+        ); /* Ajuste para pantallas pequeñas */
     }
 
     .icon-card {
@@ -127,7 +136,10 @@
 
 @media (max-width: 480px) {
     .icon-container {
-        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); /* Ajuste en pantallas más pequeñas */
+        grid-template-columns: repeat(
+            auto-fill,
+            minmax(120px, 1fr)
+        ); /* Ajuste en pantallas más pequeñas */
     }
 
     .icon-card {
